# datafusion-dolomite

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
datafusion-dolomite-integration/: Cargo.toml  README.md
datafusion-dolomite-integration/resources/: limit.yaml
datafusion-dolomite-integration/src/: lib.rs  plan.rs  planner.rs  rule.rs
datafusion-dolomite-integration/src/conversion/: logical.rs  mod.rs  physical.rs
datafusion-dolomite-integration/tests/: limit_test.rs
datafusion-dolomite-integration/tests/utils/: hep_optimizer.rs  mod.rs  schema.rs
datafusion-integration/src/: planner.rs  rule.rs
dolomite/: Cargo.toml  README.md
dolomite/src/: cost.rs  error.rs  lib.rs  optimizer.rs  stat.rs  test_utils.rs  utils.rs
dolomite/src/cascades/: binding.rs  memo.rs  optimizer.rs  task.rs
dolomite/src/cost/: mod.rs  trivial.rs
dolomite/src/heuristic/: binding.rs  mod.rs  optimizer.rs
dolomite/src/operator/: filter.rs  join.rs  limit.rs  logical.rs  mod.rs  physical.rs  projection.rs  table_scan.rs
dolomite/src/plan/: explain.rs  logical.rs  mod.rs  physical.rs  visit.rs
dolomite/src/properties/: distribution.rs  logical.rs
dolomite/src/rules/: join.rs  limit.rs  limit_push_down.rs  mod.rs  opt_expr.rs  pattern.rs  table_scan.rs
dolomite/src/rules/subquery/: flatten_dependent_joins.rs  mod.rs  planner.rs
src/: cost.rs  error.rs  lib.rs  optimizer.rs
src/cascades/: binding.rs  memo.rs  mod.rs  optimizer.rs  task.rs
src/datafusion_poc/: mod.rs  plan.rs  planner.rs  rule.rs
src/heuristic/: binding.rs  graph.rs  optimizer.rs
src/operator/: join.rs  limit.rs  logical.rs  mod.rs  physical.rs  projection.rs  table_scan.rs
src/plan/: logical.rs  mod.rs  physical.rs
src/properties/: logical.rs  mod.rs  order.rs  physical.rs
src/rules/: join.rs  limit_push_down.rs  mod.rs  pattern.rs  table_scan.rs
