[workspace]
members = [
    "datafusion-dolomite-integration",
    "dolomite"
]


[workspace.dependencies]
datafusion = "26.0.0"
datafusion-expr = "26.0.0"
datafusion-common = "26.0.0"
datafusion-physical-expr = "26.0.0"
datafusion-optimizer = "26.0.0"
datafusion-sql = "26.0.0"
arrow = { version = "40.0.0", features = ["prettyprint"] }
arrow-schema = { version = "40.0.0", features = ["serde"] }
thiserror = "1"
enum_dispatch = "0.3"
log = "^0.4"
enumset = "1"
itertools = "0.10"
enum-as-inner = "0.5.1"
derive_more = "0.99"
petgraph = "0.6"
anyhow = { version = "1", features = ["backtrace"] }
smallvec = "1"
prettytable-rs = "0.10"
lazy_static = "1"
strum = "0.24"
strum_macros = "0.24"
async-trait = "0.1.41"
futures = "0.3"
ptree = "0.4"
maplit = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync", "fs", "parking_lot"] }
tokio-stream = "0.1"
