[package]
name = "datafusion-dolomite-integration"
version = "0.1.0"
edition = "2021"

[dependencies]
dolomite = { path = "../dolomite" }

datafusion.workspace = true
datafusion-expr.workspace = true
datafusion-sql.workspace = true
datafusion-physical-expr.workspace = true
datafusion-optimizer.workspace = true
arrow-schema.workspace = true
thiserror.workspace = true
enum_dispatch.workspace = true
log.workspace = true
enumset.workspace = true
itertools.workspace = true
enum-as-inner.workspace = true
derive_more.workspace = true
petgraph.workspace = true
anyhow.workspace = true
smallvec.workspace = true
prettytable-rs.workspace = true
lazy_static.workspace = true
strum.workspace = true
strum_macros.workspace = true
async-trait.workspace = true
futures.workspace = true


[dev-dependencies]
tokio.workspace = true
tokio-stream.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
maplit.workspace = true
arrow.workspace = true

