[package]
name = "dolomite"
version = "0.1.0"
edition = "2021"

[dependencies]
datafusion.workspace = true
datafusion-expr.workspace = true
datafusion-common.workspace = true
datafusion-physical-expr.workspace = true
arrow-schema.workspace = true
thiserror.workspace = true
enum_dispatch.workspace = true
log.workspace = true
enumset.workspace = true
itertools.workspace = true
enum-as-inner.workspace = true
derive_more.workspace = true
petgraph.workspace = true
anyhow.workspace = true
smallvec.workspace = true
prettytable-rs.workspace = true
lazy_static.workspace = true
strum.workspace = true
strum_macros.workspace = true
async-trait.workspace = true
futures.workspace = true
ptree.workspace = true


[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
maplit.workspace = true

